# Vector-Quantized-Semantic-Transport

./: README.md  REPRODUCE.md  RESULTS.md  pyproject.toml  requirements-lock.txt  requirements.txt
artifacts/: codebook.npz  dictionary.json
configs/: default.yaml
data/: control_messages.txt
experiments/: embed.py  make_figures.py  run_all.py
results/: banking77.json  clinc150.json  exp9.json  exp9_nocache.json
scripts/: build_dictionary.py  download_data.sh  make_corpus.py  run_experiment.py  run_experiment_nocache.py  train_codebook.py
tests/: test_pipeline.py
tests/fixtures/: BFCL_v3_simple.json
tests/fixtures/possible_answer/: BFCL_v3_simple.json
vqt/: __init__.py  cache.py  codebook.py  dictionary.py  encoders.py  experiment.py  frame.py  llm.py  scoring.py
vqt/data/: __init__.py  bfcl.py  intent.py
