[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vqt"
version = "0.1.0"
description = "Vector-Quantized Semantic Transport: a discrete, text-API-compatible control-plane channel for LLM agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24", "scikit-learn>=1.3"]

[project.optional-dependencies]
encoder = ["sentence-transformers>=2.2"]
llm = ["openai>=1.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["vqt*"]
